# pyLatticeDSO

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  test-examples.yml
Tests/: Beam_test.py  Cell_test.py  Gradient_test.py  Lattice_test.py  Materials_test.py  Point_test.py  Timing_test.py  Utils_test.py
docs/: index.html  index.md  pyLattice.html  search.js
docs/api/: pylatticeopti.md
docs/guides/: Examples.md  Installation_tutorial.md  MeshTrimmer_class.md  cell_geometries.md  deploy-instructions.md  grasshopper_export.md
docs/pyLattice/: lattice.html  utils.html
docs/source/: JSON_input_parameters.md  conf.py  grasshopper_export.md  index.md  index.rst
examples/Pyrough/: BCC_rough.py
examples/design/: all_lattice_parameters.py  generate_lattice_mesh.py  mesh_trimmer_example.py  save_lattice_example.py  saved_lattice_example.py  simple_BCC_plot.py
examples/optimization/: Simple_optimization_case.py  example_surrogate_model_for_relative_densities.py  optimization_DDM.py
examples/simulation/: compare_FEM_DDM.py  domain_decomposition_example.py  domain_decomposition_surrogate_example.py  homogenization_example.py  reduce_basis_schur_with_greedy.py  schur_complement_example.py  simulation_lattice.py
extras/grasshopper/: grasshopper_export_example.py  pyLattice_gh_design.py
src/pyLattice/: beam.py  cell.py  design_transformation.py  gradient_properties.py  lattice.py  materials.py  plotting_lattice.py  point.py  timing.py  (+1 more)
tests/: README.md  test_examples.py
(+116 files in other folders)
